create github pages

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/h">make your own website</a></section><section class="header12 cid-qPHQeZwk3S mbr-fullscreen" id="header12-h">
+<section class="engine"><a href="https://mobirise.ws/k">how to develop own website</a></section><section class="header12 cid-qPHQeZwk3S mbr-fullscreen" id="header12-h">
 
     
 
@@ -93,7 +93,7 @@
 
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
-                                <a href="https://mobirise.com/">
+                                <a href="assets/files/SnapCode.PDF">
                                     <span class="mbr-iconfont mbri-windows"></span>
                                 </a>
                             </div>
@@ -111,7 +111,7 @@
 
                         <div class="card col-12 col-md-6 col-lg-3">
                             <div class="icon-block">
-                                <a href="https://mobirise.com/">
+                                <a href="assets/files/Bwong%20Resume%202018.pdf">
                                     <span class="mbr-iconfont mbri-align-justify"></span>
                                 </a>
                             </div>
